        - incorporated Micksa's faxable tiff support, treating as a type
          of tiff rather than a separate format
        - t/t70newgif.t now checks for gif support
        - added the convert() method
        - Added support for transparent to alpha conversion during loading
          of png files.  Note that libpng 1.0.1 is broken in handling this,
	  we know that 1.0.5 works.
	- support for writing PGM (portable gray map) files

~~~~~~~~~~~~~^ ^ ^~~~~~~~~~~~~~


0.40    TODO list
        iolayer:
        - Add scalar/mmap to iolayer
        - Add close() code to iolayer
        - Merge callback interface into iolayer
        - Add interface for writing to all formats but tiff
        - Add interface for reading for png (started), 
          gif (merge with cb patch), ppm and raw
        - Add make new tests once all formats support io_layer
        - Implment the maxread threshold (Indicates how far 
          a library can read before it indicates that it's done).

        MultiImage & metadata support:
        - Figure what interface should be between C and perl?
        - How to store data in the C interface for tags/metadata?

        - other internal image representations (design/represent.txt)

	Good stuff:
	- image colour transformations based on input images, see 
	design/cmyktorgb.txt for Addi's description
	- eventually support tiff's madness

        Old sins:
        - Make sure everything is doable with the OO interface
        - Split the other classes into seperate files
        - Compile with memory debugging enabled and fix leaks
        - dynaload.c is strongly tied to perl
	
	- should i_readgif returned colormap be an arrayref of 
	Imager::Color objects?  Note that this will break 
	compatibility with previous releases.

	- should Imager::Font be split into a base class whose 	
	new chooses a base class (ttf, t1 or win32?) to 
	instantiate.  Currently Imager::Font uses if() statements to
	select between each type of font.  It should.
